# open-very-fast-trace

./: .gitignore  .ovft.toml  CONTRIBUTING.md  Cargo.toml  README.md  custom.toml  release.sh  test_report.html
.github/: RELEASE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
cargo-ovft/: Cargo.toml  README.md
cargo-ovft/src/: main.rs
docs/requirements/: design.md  features.md  requirements.md
ovft-core/: Cargo.toml
ovft-core/src/: config.rs  error.rs  lib.rs
ovft-core/src/assets/: report.css
ovft-core/src/core/: linker.rs  mod.rs  model.rs  tracer.rs
ovft-core/src/importers/: markdown_importer.rs  mod.rs  tag_importer.rs
ovft-core/src/reporters/: html_reporter.rs  mod.rs
ovft-core/templates/: report.html
ovft-example/: Cargo.toml  build.rs
ovft-example/src/: main.rs
tests/: integration_tests.rs
