[workspace]
members = [
    "ovft-core",
    "ovft-example",
    "cargo-ovft"
]
resolver = "2"

[workspace.dependencies]
regex = "1.10"
walkdir = "2.4"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
askama = "0.12"
askama_escape = "0.10"
clap = { version = "4.4", features = ["derive"] }
pulldown-cmark = "0.11"
pulldown-cmark-to-cmark = "14.0"
env_logger = "0.11"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
tempfile = "3.8"
pretty_assertions = "1.4"
