[package]
name = "ovft-example"
version = "0.1.0"
edition = "2021"
authors = ["jFiedler24 <your.email@example.com>"]
description = "Example usage of Open Very Fast Trace in build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jFiedler24/open-very-fast-trace"

[dependencies]
ovft-core = { path = "../ovft-core" }

[build-dependencies]
ovft-core = { path = "../ovft-core" }
